--- a/cmake/Templates/timemory-config.cmake.in
+++ b/cmake/Templates/timemory-config.cmake.in
@@ -5,7 +5,7 @@ cmake_minimum_required(VERSION 3.3 FATAL_ERROR)
 #    message(FATAL_ERROR "@PROJECT_NAME@ configuration file requires CMake 3.10+")
 #endif()
 
-include(${CMAKE_CURRENT_LIST_DIR}/@PROJECT_NAME@ConfigVersion.cmake)
+include(${CMAKE_CURRENT_LIST_DIR}/@PROJECT_NAME@-version.cmake)
 
 @PACKAGE_INIT@
 
@@ -106,6 +106,11 @@ if(TIMEMORY_INSTALL_TREE)
         find_package(caliper QUIET)
     endif()
 
+    set(gotcha_DIR "@gotcha_DIR@")
+    if(NOT "${gotcha_DIR}" STREQUAL "")
+        find_package(gotcha QUIET)
+    endif()
+
     include(${CMAKE_CURRENT_LIST_DIR}/@PROJECT_NAME@LibraryDepends.cmake)
     check_required_components(@PROJECT_NAME@)
 
@@ -121,7 +126,7 @@ else() # build tree
 
     MACRO(IMPORT_LIB _LIB _IMPORT_TYPE)
         set_property(TARGET ${_LIB} PROPERTY ${_IMPORT_TYPE}
-            "${CMAKE_BINARY_DIR}/TiMemoryBuild.cmake")
+            "${CMAKE_BINARY_DIR}/timemoryBuild.cmake")
     ENDMACRO()
 
     foreach(_LIB ${@PROJECT_NAME@_INTERFACE_LIBRARIES})
@@ -143,7 +148,7 @@ endif()
 
 
 #----------------------------------------------------------------------------------------#
-#   TiMemory link target
+#   timemory link target
 #----------------------------------------------------------------------------------------#
 set(@PROJECT_NAME@_LIBRARIES @LIBNAME@-headers)
 set(@PROJECT_NAME@_CXX_LIBRARIES @LIBNAME@-cxx)
@@ -354,7 +359,7 @@ endif()
 #   find_package variables
 #----------------------------------------------------------------------------------------#
 include(FindPackageHandleStandardArgs)
-# handle the QUIETLY and REQUIRED arguments and set TiMemory_FOUND to TRUE
+# handle the QUIETLY and REQUIRED arguments and set timemory_FOUND to TRUE
 # if all listed variables are TRUE
 find_package_handle_standard_args(@PROJECT_NAME@ DEFAULT_MSG
     @PROJECT_NAME@_ROOT_DIR
