--- a/source/python/CMakeLists.txt
+++ b/source/python/CMakeLists.txt
@@ -2,7 +2,7 @@
 ##########################################################################################
 
 #
-#        TiMemory (Python)
+#        timemory (Python)
 #
 ##########################################################################################
 
