--- a/examples/ex-gotcha/CMakeLists.txt
+++ b/examples/ex-gotcha/CMakeLists.txt
@@ -24,10 +24,10 @@ target_link_libraries(test_gotcha_mpi test_gotcha_lib timemory-mpi)
 install(TARGETS test_gotcha test_gotcha_mpi DESTINATION bin)
 install(TARGETS test_gotcha_lib             DESTINATION ${CMAKE_INSTALL_LIBDIR})
 
-if(NOT "timemory-gotcha" IN_LIST timemory_EMPTY_INTERFACE_LIBRARIES)
-    add_executable(test_gotcha_native test_gotcha_native.cpp)
-    target_link_libraries(test_gotcha_native timemory::gotcha-example)
-    add_executable(test_gotcha_native_mpi test_gotcha_native.cpp)
-    target_link_libraries(test_gotcha_native_mpi timemory::gotcha-example timemory-mpi)
-    install(TARGETS test_gotcha_native test_gotcha_native_mpi DESTINATION bin)
-endif()
+# if(NOT "timemory-gotcha" IN_LIST timemory_EMPTY_INTERFACE_LIBRARIES)
+#    add_executable(test_gotcha_native test_gotcha_native.cpp)
+#    target_link_libraries(test_gotcha_native timemory::gotcha-example)
+#    add_executable(test_gotcha_native_mpi test_gotcha_native.cpp)
+#    target_link_libraries(test_gotcha_native_mpi timemory::gotcha-example timemory-mpi)
+#    install(TARGETS test_gotcha_native test_gotcha_native_mpi DESTINATION bin)
+# endif()
