--- a/source/tests/external/CMakeLists.txt
+++ b/source/tests/external/CMakeLists.txt
@@ -1,4 +1,8 @@
 
+if(NOT TIMEMORY_BUILD_GTEST)
+	return()
+endif()
+
 add_library(gotcha-tests-lib SHARED
     gotcha_tests_lib.hpp
     gotcha_tests_lib.cpp)
