Minor testing tolerance chances + system_clock -> steady_clock
- Update .appveyor.yml to disable MPI

--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -97,7 +97,7 @@ build_script:
     -DCMAKE_BUILD_TYPE="%CONFIG%"
     -DCMAKE_INSTALL_PREFIX=..\install-timemory
     -DPYTHON_EXECUTABLE="%PYTHON_EXE%"
-    -DTIMEMORY_USE_MPI=ON
+    -DTIMEMORY_USE_MPI=OFF
     -DTIMEMORY_BUILD_C=OFF
     -DTIMEMORY_BUILD_PYTHON=ON
     -DTIMEMORY_BUILD_EXAMPLES=ON
