current_rss -> page_rss, ex-minimal, decorator fixes, get()/get_labeled() for hybrids

--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -23,3 +23,4 @@ add_subdirectory(ex-cuda-event)
 add_subdirectory(ex-caliper)
 add_subdirectory(ex-ert)
 add_subdirectory(ex-gotcha)
+add_subdirectory(ex-minimal)
