--- a/timemory/__init__.py.in
+++ b/timemory/__init__.py.in
@@ -41,7 +41,7 @@ __credits__ = ["Jonathan Madsen"]
 __license__ = "MIT"
 __version__ = "@PROJECT_VERSION@"
 __maintainer__ = "Jonathan Madsen"
-__email__ = "jonrobm.programming@gmail.com"
+__email__ = "jrmadsen@lbl.gov"
 __status__ = "Development"
 
 # get the path to this directory
